--- a/auth_api/Dockerfile
+++ b/auth_api/Dockerfile
@@ -1,6 +1,6 @@
 # Filename: Dockerfile
 FROM node:18
-WORKDIR /home/wac/Documents/Callr/week_of_introduction_TCLR/auth_api
+WORKDIR /app/auth_api
 COPY package*.json ./
 RUN npm install
 COPY . .
